Update the cheatsheet

--- a/src/app/der-die-das-cheatsheet/page.mdx
+++ b/src/app/der-die-das-cheatsheet/page.mdx
@@ -31,6 +31,7 @@
 - ending in **-heit**, **-keit**: die Freiheit, die Wirklichkeit
 - ending in **-anz**, **-enz**: die Distanz, die Konsequenz
 - ending in **-ade**, **-age**, **-ette**, **-ine** (if foreign/borrowed from another language)
+- most nouns ending in **-ne**: die Biene, die Wanne
 - many (but not all) nouns ending in **-e** and **-a**
 
 ### Das / Neuter Nouns
