--- a/src/app/der-die-das-cheatsheet/page.mdx
+++ b/src/app/der-die-das-cheatsheet/page.mdx
@@ -1,4 +1,4 @@
-## German Nouns Gender Cheatsheet
+## German Der/Die/Das Articles Cheatsheet
 
 ### Der / Masculine Nouns
 - male persons: der Sohn, der Student, der Junge
